<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_welcome">

    <fragment
        android:id="@+id/nav_welcome"
        android:name="vn.edu.usth.myapplication.WelcomeFragment"
        android:label="@string/app_name">

        <action
            android:id="@+id/action_welcome_to_login"
            app:destination="@id/nav_login" />

    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="vn.edu.usth.myapplication.LoginFragment"
        android:label="@string/login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/nav_register" />

        <action
            android:id="@+id/action_login_to_forgot_password"
            app:destination="@id/nav_forgot_password" />

        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_welcome"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_register"
        android:name="vn.edu.usth.myapplication.RegisterFragment"
        android:label="@string/register" />

    <fragment
        android:id="@+id/nav_forgot_password"
        android:name="vn.edu.usth.myapplication.ForgotPasswordFragment"
        android:label="@string/forgot_password" />

    <fragment
        android:id="@+id/nav_home"
        android:name="vn.edu.usth.myapplication.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="vn.edu.usth.myapplication.EmbeddedCameraFragment"
        android:label="@string/camera" />

    <fragment
        android:id="@+id/nav_photo_preview"
        android:name="vn.edu.usth.myapplication.PhotoPreviewFragment"
        android:label="@string/photo_history">

        <argument
            android:name="photo_uri"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="timestamp"
            app:argType="long"
            android:defaultValue="0L" />

        <argument
            android:name="is_temp"
            app:argType="boolean"
            android:defaultValue="false" />

        <action
            android:id="@+id/action_photoPreviewFragment_to_translationFragment"
            app:destination="@id/nav_translation" />

    </fragment>

    <fragment
        android:id="@+id/nav_translation"
        android:name="vn.edu.usth.myapplication.TranslationFragment"
        android:label="@string/translation">

        <argument
            android:name="detected_objects"
            app:argType="string[]"
            app:nullable="true" />

        <argument
            android:name="photo_uri"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="user_input_text"
            app:argType="string"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="vn.edu.usth.myapplication.LearningProgressFragment"
        android:label="@string/learning_progress">

        <argument
            android:name="selected_tab"
            app:argType="integer"
            android:defaultValue="0" />

    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="vn.edu.usth.myapplication.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/nav_settings_profile"
        android:name="vn.edu.usth.myapplication.SettingsProfileFragment"
        android:label="@string/update_profile" />

    <fragment
        android:id="@+id/nav_settings_privacy"
        android:name="vn.edu.usth.myapplication.SettingsPrivacyFragment"
        android:label="@string/manage_privacy" />

    <fragment
        android:id="@+id/nav_settings_user_preferences"
        android:name="vn.edu.usth.myapplication.SettingsUserPreferencesFragment"
        android:label="@string/user_preferences" />

    <fragment
        android:id="@+id/nav_streaming"
        android:name="vn.edu.usth.myapplication.StreamingFragment"
        android:label="@string/streaming" />

</navigation>